--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "demoreactapp",
+  "name": "tubitak-faucet",
   "version": "1.0.0",
   "description": "React App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "concurrently -kill-others \"node server.js\" \"yarn watch\" \"npm start\" "
   },
   "repository": {
     "type": "git",
@@ -14,7 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "concurrently": "^7.0.0",
     "express": "^4.17.1",
+    "merge-descriptors": "^1.0.1",
+    "react-client-session": "0.0.7",
     "web3": "^1.6.1"
   }
 }
