--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,6 +2,12 @@ FROM node:16-alpine
 
 WORKDIR /app
 
+# Build frontend
+COPY ./frontend ./frontend
+RUN cd frontend && npm install && npm run build
+
+
+# Build server
 COPY package.json .
 RUN npm install
 
