--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -10,6 +10,7 @@
     "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1",
     "web3": "^1.6.1"
