domain changes, small refactorings

--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -22,7 +22,7 @@
     "eject": "react-scripts eject",
     "watch": "npx tailwindcss -i tailwind.css -o ./src/index.css --watch"
   },
-  "homepage": "http://eth.bag.org.tr/faucet/",
+  "homepage": "http://faucet.eth.bag.org.tr/",
   "browserslist": {
     "production": [
       ">0.2%",
