--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^7.0.0",
     "express": "^4.17.1",
     "merge-descriptors": "^1.0.1",
+    "morgan": "^1.10.0",
     "ngrok": "^4.3.0",
     "react-client-session": "0.0.7",
     "web3": "^1.6.1"
