--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "dotenv": "^16.0.0",
     "ethers": "^5.5.4",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
