--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "concurrently": "^7.0.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "merge-descriptors": "^1.0.1",
     "morgan": "^1.10.0",
